[package]
name = "aoc-2023"
version = "0.1.0"
edition = "2021"
authors = ["mharty"]
description = "Advent of Code 2023 Solutions"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.75", features = ["backtrace"] }
clap = { version = "4.4.10", features = ["derive", "cargo"] }
dotenv = { version = "0.15.0", features = ["clap"] }
lazy_static = "1.4.0"
maplit = "1.0.2"
thiserror = "1.0.50"

[profile.dev]
opt-level = 0
debug = "full"
